# so101-ros2-manipulation

./: .gitignore  README.md
config/: project_config.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/so101_manipulation/lib/so101_manipulation/: pick_place_node
install/so101_manipulation/share/so101_manipulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/so101_manipulation/share/so101_manipulation/config/: manipulation.yaml
install/so101_manipulation/share/so101_manipulation/launch/: pick_place.launch.py
log/: latest_build
ros2_ws/src/so101_description/: CMakeLists.txt  package.xml
ros2_ws/src/so101_description/config/: controllers.yaml
ros2_ws/src/so101_description/launch/: sim.launch.py  view_robot.launch.py
ros2_ws/src/so101_description/meshes/: base_motor_holder_so101_v1.part  base_motor_holder_so101_v1.stl  base_so101_v2.part  base_so101_v2.stl  motor_holder_so101_base_v1.part  motor_holder_so101_base_v1.stl  motor_holder_so101_wrist_v1.part  motor_holder_so101_wrist_v1.stl  moving_jaw_so101_v1.part  moving_jaw_so101_v1.stl  rotation_pitch_so101_v1.part  rotation_pitch_so101_v1.stl  sts3215_03a_no_horn_v1.part  sts3215_03a_no_horn_v1.stl  sts3215_03a_v1.part  sts3215_03a_v1.stl  under_arm_so101_v1.part  under_arm_so101_v1.stl  upper_arm_so101_v1.part  upper_arm_so101_v1.stl  waveshare_mounting_plate_so101_v2.part  waveshare_mounting_plate_so101_v2.stl  wrist_roll_follower_so101_v1.part  wrist_roll_follower_so101_v1.stl  wrist_roll_pitch_so101_v2.part  wrist_roll_pitch_so101_v2.stl
ros2_ws/src/so101_description/mjcf/: assets  scene.xml  so101_new_calib.xml
ros2_ws/src/so101_description/rviz/: view_robot.rviz
ros2_ws/src/so101_description/urdf/: so101.urdf.xacro
ros2_ws/src/so101_manipulation/: package.xml  setup.cfg  setup.py
ros2_ws/src/so101_manipulation/config/: manipulation.yaml
ros2_ws/src/so101_manipulation/launch/: pick_place.launch.py
ros2_ws/src/so101_manipulation/so101_manipulation/: pick_place_node.py
ros2_ws/src/so101_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/so101_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  so101.srdf
ros2_ws/src/so101_moveit_config/launch/: moveit.launch.py
ros2_ws/src/so101_perception/: package.xml  setup.py
ros2_ws/src/so101_perception/config/: perception.yaml
ros2_ws/src/so101_perception/launch/: perception.launch.py
ros2_ws/src/so101_perception/so101_perception/: detection_node.py
scripts/: collect_demos.py  convert_to_lerobot.py  eval_policy.py  find_waypoints.py  teleop.py  teleop_direct.py  teleop_nexus.py  test_nexus_pick.py  test_pick_direct.py  train_act.py  verify_setup.py
