<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_description</name>
  <version>0.1.0</version>
  <description>SO-101 robot arm description, simulation, and launch files</description>
  <maintainer email="adimunot21@gmail.com">Aditya Munot</maintainer>
  <license>MIT</license>

  <!-- Build tool — ament_cmake because we install data files (URDF, meshes, configs) -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies — packages we need when launching -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>mujoco_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
