<?xml version="1.0"?>
<package format="3">
  <name>so101_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt2 configuration for SO-101 robot arm</description>
  <maintainer email="adimunot21@gmail.com">Aditya Munot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- MoveIt2 core -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>

  <!-- Our description package (provides URDF) -->
  <exec_depend>so101_description</exec_depend>

  <!-- Standard ROS2 deps -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
